// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation does not return endpoint error when no endpoints are provided while fetching 1`] = `
Object {
  "endpoints": false,
  "name": "Please enter a name.",
}
`;

exports[`formValidation does not return endpoint error when no endpoints are provided while saving 1`] = `
Object {
  "endpoints": false,
  "name": "Please enter a name.",
}
`;

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "endpoints": "You must have one or more items in your Transfer List in order to save.",
  "name": "Please enter a name.",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "endpoints": "You must have one or more items in your Transfer List in order to save.",
  "name": "Please enter a name.",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "endpoints": false,
  "name": false,
}
`;
